[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/backpack_hover.png" type="Texture" id=1]
[ext_resource path="res://UI/backpack.png" type="Texture" id=2]
[ext_resource path="res://Inventory/InventoryContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://InventoryUI.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Pixellettersfull-BnJ5.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 5 )

[node name="InventoryUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryContainer" parent="." instance=ExtResource( 3 )]
margin_left = 245.0
margin_top = 26.0
margin_right = 205.0
margin_bottom = -14.0

[node name="InventoryButton" type="TextureButton" parent="."]
margin_left = 296.0
margin_top = 2.0
margin_right = 317.0
margin_bottom = 24.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Tooltip"]
margin_right = 40.0
margin_bottom = 14.0
mouse_filter = 2
color = Color( 0.156863, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tooltip"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "asdasd"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="InventoryButton" to="." method="_on_TextureButton_pressed"]
